# aria

./: .env  .eslintrc  .gitattributes  .gitignore  chat.html  chatserver.js  config.js  index.html  package-lock.json  package.json  typings.json  vut.toml
backend/: .eslintrc.json  Cargo.toml  package-lock.json  package.json  tsconfig.json
backend/aria/: Cargo.toml
backend/aria/src/: auth.rs  main.rs
backend/aria/src/command/: mod.rs  process_images.rs  regenerate_emote_images.rs  regenerate_post_images.rs  server.rs
backend/aria/src/server/: mod.rs
backend/aria/src/server/api/: auth.rs  chat.rs  mod.rs  room.rs  sys.rs  user.rs
backend/aria/src/websocket_server/: connection.rs  lobby.rs  mod.rs
backend/aria/src/websocket_server/room/: handler.rs  membership.rs  mod.rs  state.rs
backend/core/: Cargo.toml
backend/core/src/: auth.rs  emote.rs  file.rs  image.rs  lib.rs  post.rs  room.rs  transform.rs  user.rs
backend/core/src/config/: default_config.toml  mod.rs
backend/core/src/util/: anim_thumbnail.rs  hash.rs  mod.rs  password.rs  thumbnail.rs  video.rs
backend/core/src/util/thumbnail/: anim_thumbnail.rs  mod.rs  static_thumbnail.rs  video_preview.rs
backend/models/: Cargo.toml
backend/models/src/: api.rs  local.rs
backend/server/: Cargo.toml
backend/server/src/: auth.rs  main.rs
backend/server/src/server/: mod.rs
backend/server/src/server/api/: auth.rs  chat.rs  mod.rs  room.rs  user.rs
backend/server/src/websocket_server/: connection.rs  lobby.rs  mod.rs  notification.rs  room.rs
backend/server/src/websocket_server/room/: handler.rs  membership.rs  mod.rs  state.rs
backend/shared/: Cargo.toml
backend/shared/src/util/: mod.rs
backend/shared/src/util/htmlize/: htmlize.pest  mod.rs
backend/src/: auth.ts  config.sample.ts  main.ts
backend/src/middlewares/: vary.ts
backend/src/modules/: module.ts
backend/src/modules/chat/: chatserver.ts  chatstore.ts  index.ts  server.ts  viewmodels.ts
backend/src/modules/chat/stores/: pg.ts  postgres.ts
backend/src/modules/chat/stores/sequelize/: index.ts  models.ts
backend/src/modules/room/: index.ts  models.ts  roomserver.ts  roomstore.d.ts  roomstore.ts  server.ts
backend/src/modules/room/stores/: pg.ts  postgres.ts
backend/src/modules/room/stores/sequelize/: index.ts  models.ts
backend/src/services/: image.ts
backend/src/store/: index.ts  postgres.ts
backend/src/types/: easyimage.d.ts
backend/src/util/: passwordgen.ts
backend/store/: Cargo.toml  sqlx-data.json
backend/store/.sqlx/: query-03b2ac0a8de4addf77242f07c87f2f6cfffe7cb3ce1874e2a9ed54aec1fca4d0.json  query-1d2943d25677b362f3e7109c65bc0965e58823a80f82607dc5584645539135a6.json  query-2db027c980cfa556f2b3210a30999d46c48c681bff0f2146fa8364c10d5bb54e.json  query-2f8fef67e93bca6ca0af8d8b0cc61c2d4e3e76873c7c6e024f25186f7cf6edee.json  query-34a51b29deb66ef2f8560ca687981acc90677aabca71cb89ecdb241556f8d705.json  query-5f0887343c6ea22aab9b26f659a6ed4f4c0ac4885d0502a09c295e470cc6b17a.json  query-5fd5f8bade63d1e18cb2b23700da7828707c2ebb2637a59af9c9a806b79638d6.json  query-6cdb92684eae68490fa78d505ef1e9741ec382385f6bc45495d2bfb90469ae61.json  query-91b0c635260da818106323d8a960a0ef88667d9cf0e0d200d7795fcd4ff45ec5.json  query-b97575fe6c9b82d4f2d222c8649a51f6be5c1f3b88f4298d48517ee4ba11f7b1.json  query-c36d8e883fba2d999110c91ef7ffe35e865ffc7dd3bc412d1a2b1819b34fa551.json  query-d3a10c403be31344baebf67689a9d5609b94035b60999566854ffd9fefc8d198.json  query-d543ff9c3ef40f3b731d5ff0786f39ea8c380091b39e1a59488acb955ae9065d.json  query-ee5765add022d0f86fcedd3a196fa8bd10310eb3c5172f5a5df14e1fb01bc8f0.json  query-f8b6abb5c443fa4397dcd17efb362ec70647d13f74596a8233d6a1b0a812119f.json  query-fd2682a1a588461ca0ba771bc9f246a6086d1ce47a8934acfef9b88ab28909b2.json
backend/store/migrations/: 20220909235330_update_post_images_function.sql  20220910084437_get_emotes_function.sql  20220913215711_delete_emote_function.sql  20220918032752_indexes.sql  20220919180914_use_room_id.sql  20220920181202_post_password.sql  20220921191103_user_id.sql  20220921205350_delete_functions_return_success.sql  20220922144740_post_admin_column.sql  20220922154253_refresh_token.sql  20231002231856_add_room_playback_state.sql
backend/store/sql/functions/: create_emote.sql  create_post.sql  create_refresh_token.sql  create_room.sql  delete_emote.sql  delete_post.sql  get_emotes.sql  get_recent_posts.sql  get_room_by_name.sql  refresh_refresh_token.sql  set_room_content.sql  set_room_playback_state.sql  update_emote_images.sql  update_post_images.sql
backend/store/sql/sequences/: refresh_token_family_seq.sql  user_id_seq.sql
backend/store/sql/tables/: emote.sql  image.sql  post.sql  refresh_token.sql  room.sql
backend/store/sql/types/: new_emote.sql  new_image.sql  new_post.sql  refresh_refresh_token_result.sql
backend/store/src/: lib.rs  models.rs  store.rs
backend/tool/: Cargo.toml
backend/tool/src/: main.rs
backend/tool/src/command/: mod.rs  process_images.rs  regenerate_emote_images.rs  regenerate_post_images.rs
frontend/: .eslintrc.cjs  .gitignore  README.md  biome.json  index.html  package-lock.json  package.json  pnpm-lock.yaml  rsbuild.config.ts  tsconfig.json  vite.config.ts  webpack.config.js
frontend-old/: index.html  package.json  vite.config.ts
frontend2/: deno.json  vite.config.mts
migrations/: 0001_initial.sql  0002_room_content_column.sql  0003_set_room_content_function.sql  0004_image_hash.sql  0005_image_hash_2.sql  0006_emote.sql  0007_fix_create_post.sql  0008_remove_unnecessary_image_fields.sql  0009_cleanup.sql  0010_final_migration_before_sqlx.sql  20220908212653_initial.sql  20220910001928_update_emote_images_function.sql  20220917234244_post_is_deleted_column.sql  20220919170828_optimize_functions.sql
sql/: mysql.sql
src/: app.html  app.js  chat.html  chat.js  content.html  content.js  main.js  nav-bar.html  resizechat.js  room.html
styles/: chat-dark.css  chat-yotsubab.css  chat.css  common.css  frame.css  room.css
userscript/: aria-google-drive.user.js
views/: chat.handlebars  room.handlebars
(+182 files in other folders)
