[workspace]
resolver = "2"

members = [
  "aria",
  "core",
  "models",
  "shared",
  "store",
]

default-members = [
  "aria",
  "core",
  "models",
  "shared",
  "store",
]

[workspace.dependencies]
anyhow = "1.0.86"
async-trait = "0.1.81"
axum = "0.7.5"
axum-client-ip = "0.6.0"
axum-extra = "0.9.3"
blake3 = "1.5.3"
bytes = "1.6.1"
chrono = "0.4.38"
clap = "4.5.11"
dirs = "5.0.1"
futures = "0.3.30"
futures-channel = "0.3.30"
futures-core = "0.3.30"
futures-util = "0.3.30"
image = "0.25.2"
jsonwebtoken = "9.3.0"
once_cell = "1.19.0"
rand = "0.8.5"
regex = "1.10.5"
serde = "1.0.204"
serde_derive = "1.0.204"
serde_json = "1.0.120"
sqlx = "0.8.0"
thiserror = "1.0.63"
tokio = "1.39.2"
tokio-tungstenite = "0.23.1"
toml = "0.8.16"
tower-http = "0.5.2"
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
uuid = "1.10.0"
