[workspace]
resolver = "2"

members = [
  "aria",
  "core",
  "models",
  "shared",
  "store",
]

default-members = [
  "aria",
  "core",
  "models",
  "shared",
  "store",
]

[workspace.dependencies]
anyhow = "1.0.95"
async-trait = "0.1.85"
axum = "0.8.1"
axum-client-ip = "0.7.0"
axum-extra = "0.10.0"
blake3 = "1.5.5"
bytes = "1.9.0"
chrono = "0.4.39"
clap = "4.5.26"
dirs = "6.0.0"
futures = "0.3.31"
futures-channel = "0.3.31"
futures-core = "0.3.31"
futures-util = "0.3.31"
image = "0.25.5"
jsonwebtoken = "9.3.0"
once_cell = "1.20.2"
rand = "0.8.5"
regex = "1.11.1"
serde = "1.0.217"
serde_derive = "1.0.217"
serde_json = "1.0.136"
sqlx = "0.8.3"
thiserror = "2.0.11"
tokio = "1.43.0"
tokio-tungstenite = "0.26.1"
toml = "0.8.19"
tower-http = "0.6.2"
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
uuid = "1.12.0"
