[workspace]
resolver = "2"

members = [
  "aria",
  "core",
  "models",
  "shared",
  "store",
]

default-members = [
  "aria",
  "core",
  "models",
  "shared",
  "store",
]

[workspace.dependencies]
anyhow = "1.0.98"
async-trait = "0.1.88"
axum = "0.8.3"
axum-client-ip = "1.0.0"
axum-extra = "0.10.1"
blake3 = "1.8.1"
bytes = "1.10.1"
chrono = "0.4.40"
clap = "4.5.36"
dirs = "6.0.0"
futures = "0.3.31"
futures-channel = "0.3.31"
futures-core = "0.3.31"
futures-util = "0.3.31"
image = "0.25.6"
jsonwebtoken = "9.3.1"
once_cell = "1.21.3"
rand = "0.9.1"
regex = "1.11.1"
serde = "1.0.219"
serde_derive = "1.0.219"
serde_json = "1.0.140"
sqlx = "0.8.5"
thiserror = "2.0.12"
tokio = "1.44.2"
tokio-tungstenite = "0.26.2"
toml = "0.8.20"
tower-http = "0.6.2"
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
uuid = "1.16.0"
