[package]
name = "aria"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aria_core = { path = "../core" }
aria_models = { path = "../models" }
aria_shared = { path = "../shared" }
anyhow = "1.0.79"
axum = { version = "0.7.4" , features = ["macros", "multipart"] }
axum-client-ip = "0.5.0"
axum-extra = { version = "0.9.2", features = ["typed-header"] }
chrono = "0.4.31"
clap = { version = "4.4.16", features = ["derive"] }
futures = "0.3.30"
futures-channel = "0.3.30"
jsonwebtoken = "9.2.0"
regex = "1.10.2"
serde = "1.0.195"
serde_derive = "1.0.195"
serde_json = "1.0.111"
thiserror = "1.0.56"
tokio = { version = "1.35.1", features = ["macros", "rt-multi-thread", "signal"] }
tokio-tungstenite = "0.21.0"
tower-http = { version = "0.5.1", features = ["fs", "trace"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
uuid = { version = "1.6.1", features = ["serde"] }
