[package]
name = "aria"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aria_core = { path = "../core" }
aria_models = { path = "../models" }
aria_shared = { path = "../shared" }
anyhow = "1.0.86"
axum = { version = "0.7.5" , features = ["macros", "multipart"] }
axum-client-ip = "0.6.0"
axum-extra = { version = "0.9.3", features = ["typed-header"] }
chrono = "0.4.38"
clap = { version = "4.5.4", features = ["derive"] }
futures = "0.3.30"
futures-channel = "0.3.30"
jsonwebtoken = "9.3.0"
regex = "1.10.4"
serde = "1.0.203"
serde_derive = "1.0.203"
serde_json = "1.0.117"
thiserror = "1.0.61"
tokio = { version = "1.37.0", features = ["macros", "rt-multi-thread", "signal"] }
tokio-tungstenite = "0.21.0"
tower-http = { version = "0.5.2", features = ["fs", "trace"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
uuid = { version = "1.8.0", features = ["serde"] }
