[package]
name = "aria"
version = "0.1.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aria_core = { path = "../core" }
aria_models = { path = "../models" }
aria_shared = { path = "../shared" }
anyhow = { workspace = true }
axum = { workspace = true , features = ["macros", "multipart"] }
axum-client-ip = { workspace = true }
axum-extra = { workspace = true, features = ["typed-header"] }
chrono = { workspace = true }
clap = { workspace = true, features = ["derive"] }
futures = { workspace = true }
futures-channel = { workspace = true }
jsonwebtoken = { workspace = true }
regex = { workspace = true }
serde = { workspace = true }
serde_derive = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true, features = ["macros", "rt-multi-thread", "signal"] }
tokio-tungstenite = { workspace = true }
tower-http = { workspace = true, features = ["fs", "trace"] }
tracing = { workspace = true }
tracing-subscriber = { workspace = true, features = ["env-filter"] }
uuid = { workspace = true, features = ["serde"] }
