[package]
name = "aria_core"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aria_models = { path = "../models" }
aria_shared = { path = "../shared" }
aria_store = { path = "../store" }
anyhow = "1.0.79"
blake3 = "1.5.0"
bytes = "1.5.0"
chrono = "0.4.31"
dirs = "5.0.1"
futures-channel = "0.3.30"
futures-core = "0.3.30"
futures-util = "0.3.30"
image = { version = "0.24.8", features = ["webp-encoder"] }
once_cell = "1.19.0"
rand = "0.8.5"
regex = "1.10.2"
serde = "1.0.195"
serde_derive = "1.0.195"
serde_json = "1.0.111"
tokio = "1.35.1"
toml = "0.8.8"
tracing = "0.1.40"
uuid = { version = "1.6.1", features = ["v4"] }
