[package]
name = "aria_core"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aria_models = { path = "../models" }
aria_shared = { path = "../shared" }
aria_store = { path = "../store" }
anyhow = "1.0.86"
blake3 = "1.5.1"
bytes = "1.6.0"
chrono = "0.4.38"
dirs = "5.0.1"
futures-channel = "0.3.30"
futures-core = "0.3.30"
futures-util = "0.3.30"
image = { version = "0.25.1", features = ["webp"] }
once_cell = "1.19.0"
rand = "0.8.5"
regex = "1.10.4"
serde = "1.0.203"
serde_derive = "1.0.203"
serde_json = "1.0.117"
tokio = "1.37.0"
toml = "0.8.13"
tracing = "0.1.40"
uuid = { version = "1.8.0", features = ["v4"] }
