[package]
name = "aria_core"
version = "0.1.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aria_models = { path = "../models" }
aria_shared = { path = "../shared" }
aria_store = { path = "../store" }
anyhow = { workspace = true }
blake3 = { workspace = true }
bytes = { workspace = true }
chrono = { workspace = true }
dirs = { workspace = true }
futures-channel = { workspace = true }
futures-core = { workspace = true }
futures-util = { workspace = true }
image = { workspace = true, features = ["webp"] }
once_cell = { workspace = true }
rand = { workspace = true }
regex = { workspace = true }
serde = { workspace = true }
serde_derive = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
toml = { workspace = true }
tracing = { workspace = true }
uuid = { workspace = true, features = ["v4"] }
