[package]
name = "aria_models"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aria_shared = { path = "../shared" }
chrono = { version = "0.4.26", features = ["serde"] }
serde = "1.0.183"
serde_derive = "1.0.183"
uuid = "1.4.1"
