[package]
name = "aria_models"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aria_shared = { path = "../shared" }
chrono = { version = "0.4.38", features = ["serde"] }
serde = "1.0.203"
serde_derive = "1.0.203"
uuid = "1.8.0"
