[package]
name = "aria_models"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aria_shared = { path = "../shared" }
chrono = { workspace = true, features = ["serde"] }
serde = { workspace = true }
serde_derive = { workspace = true }
uuid = { workspace = true }
