[package]
name = "aria_server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aria_core = { path = "../core" }
aria_models = { path = "../models" }
aria_shared = { path = "../shared" }
anyhow = "1.0.64"
chrono = "0.4.22"
clap = { version = "3.2.20", features = ["derive"] }
futures = "0.3.24"
futures-channel = "0.3.24"
hmac = "0.12.1"
jwt = "0.16.0"
rocket = { version = "0.5.0-rc.2", features = ["json"] }
serde = "1.0.144"
serde_derive = "1.0.144"
serde_json = "1.0.85"
sha2 = "0.10.5"
tokio = "1.21.0"
tokio-tungstenite = "0.17.2"
tracing = "0.1.36"
tracing-subscriber = { version = "0.3.15", features = ["env-filter"] }
