[package]
name = "aria_server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aria_core = { path = "../core" }
aria_models = { path = "../models" }
aria_shared = { path = "../shared" }
anyhow = "1.0.64"
axum = { version = "0.6.0-rc.2" , features = ["headers", "macros", "multipart"] }
axum-extra = { version = "0.4.0-rc.1", features = ["spa"] }
chrono = "0.4.22"
clap = { version = "3.2.20", features = ["derive"] }
futures = "0.3.24"
futures-channel = "0.3.24"
jsonwebtoken = "8.1.1"
regex = "1.6.0"
serde = "1.0.144"
serde_derive = "1.0.144"
serde_json = "1.0.85"
tokio = { version = "1.21.1", features = ["macros", "signal"] }
tokio-tungstenite = "0.17.2"
tower-http = { version = "0.3.4", features = ["trace"] }
tracing = "0.1.36"
tracing-subscriber = { version = "0.3.15", features = ["env-filter"] }
