[package]
name = "aria_store"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
async-trait = "0.1.73"
chrono = "0.4.31"
serde = "1.0.188"
serde_derive = "1.0.188"
sqlx = { version = "0.7.2", features = ["chrono", "ipnetwork", "postgres", "runtime-tokio-rustls", "uuid"] }
tokio = "1.32.0"
tracing = "0.1.37"
uuid = "1.4.1"
