[package]
name = "aria_store"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.79"
async-trait = "0.1.77"
chrono = "0.4.31"
serde = "1.0.195"
serde_derive = "1.0.195"
sqlx = { version = "0.7.3", features = ["chrono", "ipnetwork", "postgres", "runtime-tokio-rustls", "uuid"] }
tokio = "1.35.1"
tracing = "0.1.40"
uuid = "1.6.1"
