[package]
name = "aria_store"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = { workspace = true }
async-trait = { workspace = true }
chrono = { workspace = true }
serde = { workspace = true }
serde_derive = { workspace = true }
sqlx = { workspace = true, features = ["chrono", "ipnetwork", "postgres", "runtime-tokio-rustls", "uuid"] }
tokio = { workspace = true }
tracing = { workspace = true }
uuid = { workspace = true }
