[package]
name = "aria_tool"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aria_core = { path = "../core" }
aria_models = { path = "../models" }
aria_shared = { path = "../shared" }
anyhow = "1.0.64"
chrono = "0.4.22"
clap = { version = "3.2.20", features = ["derive"] }
futures-channel = "0.3.24"
tokio = "1.21.0"
tracing = "0.1.36"
tracing-subscriber = { version = "0.3.15", features = ["env-filter"] }
